--- a/1010!/css/style.css
+++ b/1010!/css/style.css
@@ -1,35 +1,83 @@
-html,body,*{
-	margin: 0;
-	padding: 0;
+* {
+    margin: 0;
+    padding: 0;
 }
+
+#title {
+    margin: 15px 0;
+}
+
+#title h1 {
+    text-align: center;
+    font-size: 4rem;
+    font-family: Monaco, Consolas, 'Courier New';
+    letter-spacing: 8px;
+}
+
+
+#table {
+    position: relative;
+    margin: 0 auto;
+}
+
+#table div {
+    border-radius: 5px;
+}
+
+#bricks {
+    position: relative;
+    margin: 40px auto;
+}
+
+
+/*@media screen and (max-width: 520px) {
+    #container {  width: 500px;
+    height: 500px;}
+}
+@media screen and (min-width: 520px) {
+    #container {  width: 500px;
+    height: 500px;}
+}*/
+
+
 /* random color */
-.c1{
-	background-color: #7B68EE;
+
+.c1 {
+    background-color: #7B68EE;
 }
-.c2{
-	background-color: #FFD700;
+
+.c2 {
+    background-color: #FFD700;
 }
-.c3{
-	background-color: #FFA500;
+
+.c3 {
+    background-color: #FFA500;
 }
-.c4{
-	background-color: #FF3E96;
+
+.c4 {
+    background-color: #FF3E96;
 }
-.c5{
-	background-color: #CD4F39;
+
+.c5 {
+    background-color: #CD4F39;
 }
-.c6{
-	background-color: #76EE00;
+
+.c6 {
+    background-color: #76EE00;
 }
-.c7{
-	background-color: #48D1CC;
+
+.c7 {
+    background-color: #48D1CC;
 }
-.c8{
-	background-color: #3CB371;
+
+.c8 {
+    background-color: #3CB371;
 }
-.c9{
-	background-color: #00B2EE;
+
+.c9 {
+    background-color: #00B2EE;
 }
-.default{
-	background-color: #f2f2f2;
+
+.default {
+    background-color: #f2f2f2;
 }
